# docker-uv-devcontainer-ci

./: .pre-commit-config.yaml  README.md  compose.yaml  compose_node.yaml  pyproject.toml  setup.ps1  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yml  tests.yml  tests_node.yml
backend/: Dockerfile  Dockerfile_Wagtail  Dockerfile_node  Dockerfile_node_wagtail  manage.py
backend/PROJECT_NAME/: asgi.py  settings.py  urls.py  wsgi.py
