[project]
name = "PROJECT_NAME"
authors = [
    { name = "CandyLabs GmbH", email = "info@candylabs.de" },
]
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.2.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "Automat==24.8.1",
    "beautifulsoup4==4.12.3",
    "billiard>=4.2.1",
    "boto3==1.35.99",
    "botocore==1.35.99",
    "cachetools==5.5.0",
    "celery",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudinary==1.41.0",
    "constantly==23.10.4",
    "contextlib2==21.6.0",
    "coolname==2.2.0",
    "cron-descriptor==1.4.5",
    "cryptography==43.0.1",
    "daphne==4.1.2",
    "Django==5.0.6",
    "django-allauth==65.4.1",
    "django-browser-reload==1.17.0",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.7.0",
    "django-ninja==1.3.0",
    "django-ninja-extra==0.22.3",
    "django-ninja-jwt==5.3.5",
    "django-reversion==5.1.0",
    "django-storages==1.14.1",
    "django-taggit==6.1.0",
    "django-tailwind==3.8.0",
    "django-timezone-field==7.0",
    "django-widget-tweaks==1.5.0",
    "filetype==1.2.0",
    "google-api-core==2.24.0",
    "google-auth==2.36.0",
    "google-cloud-vision==3.8.1",
    "googleapis-common-protos==1.66.0",
    "grpcio==1.68.1",
    "grpcio-status==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "injector==0.22.0",
    "jmespath==1.0.1",
    "jwt==1.3.1",
    "kombu==5.3.7",
    "libretranslatepy==2.1.1",
    "lxml==5.3.1",
    "pillow==11.0.0",
    "prompt_toolkit==3.0.47",
    "proto-plus==1.25.0",
    "protobuf==5.29.1",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "PyJWT==2.10.1",
    "pyOpenSSL==24.2.1",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv",
    "python-slugify==8.0.4",
    "redis==5.0.7",
    "requests==2.32.3",
    "rsa==4.9",
    "s3transfer==0.10.2",
    "sentry-sdk",
    "service-identity==24.1.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlparse==0.5.0",
    "text-unidecode==1.3",
    "translate>=3.6.1",
    "Twisted==24.7.0",
    "txaio==23.1.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "unique-names-generator==1.0.2",
    "urllib3==2.2.2",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "zope.interface==7.0.3",
]

[dependency-groups]
dev = ["ruff>=0.3.0", "pytest==8.3.4", "pytest-django==4.10.0", "debugpy"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
exclude = ["migrations"]

[tool.ruff.lint]
extend-safe-fixes = ["E721", "E712", "F811"]
select = ["E", "F", "I", "B", "SIM", "UP"]
ignore = ["SIM116", "E501", "B008"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
django_find_project = false
DJANGO_SETTINGS_MODULE = "PROJECT_NAME.settings_test"

[tool.pytest.ini_options]
addopts = "--ds=PROJECT_NAME.settings_test -m unit"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
